Add spring directory to gitignore to prevent conflicts between Spring and Git when using the guardfile.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+#Prevent conflicts between Spring and Git when using Guard
+/spring/*.pid
